# 158BitNet

./: .gitignore  CMakeLists.txt  LICENSE  README.md
examples/: minimal_generate.c  openai_server.c
include/: bitnet.h
scripts/: build_android.sh
src/: bitnet.c  bitnet_internal.h  bitnet_metal.h  bitnet_metal.mm  gguf.c  gguf.h  ops.c  ops.h  quant_q4k.c  quant_q4k.h  quant_q6k.c  quant_q6k.h  quant_tq2_0.c  quant_tq2_0.h  sampler.c  sampler.h  tensor.c  tensor.h  tokenizer.c  tokenizer.h
tests/: compare_logits.py  compare_logits_detail.py  ref_logits.npy  test_api_smoke.c  test_benchmark.c  test_bw_analysis.c  test_dequant_bench.c  test_emb_debug.c  test_generation_controls.c  test_gguf.c  test_i2s_bench.c  test_i2s_correctness.c  test_kv_cache.c  test_logits_compare.c  test_lora_loader.c  test_metal_i2s_correctness.c  test_openai_server_api.py  test_openai_server_default_config.py  test_openai_server_lora_api.py  test_openai_server_multiturn_quality.py  test_openai_server_utf8.c  test_ops.c  test_profile_decode.c  test_profile_multiturn.c  test_profile_once.c  test_q6k_layout.c  test_q6k_output_bench.c  test_quant_tq2_0.c  test_step_compare.c  test_step_compare.py  test_token_debug.c  test_tokenizer.c  test_tq2_kernel_bench.c  test_tq2_model_bench.c  verify_emb.py  verify_embedding.py  verify_forward_pass.py  verify_forward_pass_v2.py  verify_llama.py  verify_q6k.py  (+2 more)
tools/: gguf_inspect.c  train_xiaoli_lora.c
